# MSP_Mobile_Model_Viewer

./: .gitignore  ObjConverter.sln  README.md  settings.gradle
CjClutter.ObjLoader.Loader/Loaders/: ObjLoader.cs
CjClutter.ObjLoader.Loader/TypeParsers/: GroupParser.cs
ObjConverter/: ObjConverter.csproj  Program.cs
app/: build.gradle
app/src/androidTest/java/at/tributsch/msp_android_opengl_es/: ExampleInstrumentedTest.java
app/src/androidTest/java/at/tributsch/msp_mobile_model_viewer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/cube/textures/: Cube_diffuse.pkm
app/src/main/assets/models/tank/: old_tank.mtl
app/src/main/assets/models/tank/textures/: tank_par_2_DefaultMaterial_BaseColor.pkm  tank_par_3_DefaultMaterial_BaseColor.pkm  tank_par_4_DefaultMaterial_BaseColor.pkm  tank_part_1_DefaultMaterial_BaseColor.pkm
app/src/main/assets/tank/textures/: tank_par_2_DefaultMaterial_BaseColor.pkm  tank_par_3_DefaultMaterial_BaseColor.pkm  tank_par_4_DefaultMaterial_BaseColor.pkm  tank_part_1_DefaultMaterial_BaseColor.pkm
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  jni_bridge.h  model_viewer_jni_bridge.cpp  model_viewer_jni_bridge.h  renderer.cpp  renderer.h  renderer_es_30.cpp  renderer_es_30.h  renderer_es_3x.cpp  renderer_es_3x.h  timer.cpp  timer.h  util.cpp  util.h
app/src/main/cpp/gl/: bin_loader.h  etc_header.cpp  etc_header.h  gl.h  gl_util.cpp  gl_util.h  obj_loader.h  obj_loader_.h
app/src/main/cpp/glm/: geometric.hpp
app/src/main/cpp/glm/gtx/: pca.hpp
app/src/main/cpp/primitive/: cube.cpp  cube.h  material.cpp  material.h  mesh.cpp  mesh.h  texture.cpp  texture.h  vertex.cpp  vertex.h
app/src/main/java/at/tributsch/msp_android_opengl_es/: GlEs30JniActivity.java  GlEs30JniLib.java  GlEs30JniView.java
app/src/main/java/at/tributsch/msp_mobile_model_viewer/: GestureDetector.java  ModelViewer.java  ModelViewerJniBridge.java  OpenGlModelView.java
app/src/main/res/layout/: activity_gl_es30_jni.xml  activity_model_viewer.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/at/tributsch/msp_android_opengl_es/: ExampleUnitTest.java
app/src/test/java/at/tributsch/msp_mobile_model_viewer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
